<resources>
    <string name="app_name">Freibier POS</string>
    <string name="bx_pos">BX POS</string>
    <string name="powered_by">POS powered by BX Service GmbH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="save">Save</string>
    <string name="discard_draft_order">Discard order?</string>
    <string name="discard">Discard</string>
    <string name="number_of_guests">Set number of guests</string>
    <string name="guests">Guests</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="note">Add remark</string>
    <string name="kitchen_note">Kitchen note</string>
    <string name="undo">UNDO</string>
    <string name="item_removed">Item removed</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="selected_count">%1$d selected</string>
    <string name="set_table">Set table</string>
    <string name="change_table">Switch table</string>
    <string name="split_order">Split order</string>
    <string name="join_orders">Join orders</string>
    <string name="remove">Remove</string>
    <string name="send_items">Send</string>
    <string name="synchronize_orders_title">Synchronize orders?</string>
    <string name="synchronize_orders_message">Synchronize %1$d orders with iDempiere?</string>
    <string name="join_order_question">Join orders?</string>
    <string name="join">Join</string>
    <string name="split">Split</string>
    <string name="new_order">New order</string>
    <string name="unable_split">You can\'t split an order with one or less items</string>
    <string name="split_all_Error">You can\'t select all items to split</string>
    <string name="void_title">Void</string>
    <string name="select_order">Select order</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_retry">RETRY</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_connection">No internet connection!</string>
    <string name="error_no_connection_username">No internet connection and unknown username!</string>
    <string name="error_incorrect_password">Wrong username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_config_server">Data error. Please contact the administrator</string>
    <string name="error_no_server_data_configured">Login data missing. Please contact the administrator!</string>
    <string name="title_activity_edit_order">Edit order</string>
    <string name="title_activity_create_order">New order</string>
    <string name="title_activity_add_items">Add items</string>
    <string name="title_activity_view_open_orders">Open orders</string>
    <string name="title_activity_closed_orders">Closed orders</string>
    <string name="title_activity_review_closed_order">Review order</string>
    <string name="empty_order">The order is empty</string>
    <string name="ordering">ORDERING</string>
    <string name="ordered">ORDERED</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_value">Subtotal: %1$s</string>
    <string name="total_value">Total: %1$s</string>
    <string name="total">Total</string>
    <string name="quantity_summary">Quantity: %1$d</string>
    <string name="waiter_role">Server</string>
    <string name="title_activity_admin_settings">Settings</string>
    <string name="pref_header_general">Server settings</string>
    <string name="pref_title_display_name">Server URL</string>
    <string name="pref_default_display_name">URL</string>
    <string name="organization">Organization ID</string>
    <string name="client">Client ID</string>
    <string name="role_id">Role ID</string>
    <string name="warehouse_id">Warehouse ID</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Always (Every transaction)</item>
        <item>Never (Update manually)</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="exact">Quick Pay</string>
    <string name="del">Del</string>
    <string name="pay">Pay</string>
    <string name="set_extra">Surcharge</string>
    <string name="add_discount">Discount</string>
    <string name="title_activity_pay_order">Payment</string>
    <string name="reason">Reason</string>
    <string name="change">Change</string>
    <string name="change_value">Change: %1$s</string>
    <string name="to_pay">Pay: %1$s</string>
    <string name="surcharge_value">Surcharge: %1$s</string>
    <string name="discount_value">Discount: %1$s</string>
    <string name="paid">Paid</string>
    <string name="paid_value">Paid: %1$s</string>
    <string name="percentage_sign">%</string>
    <string name="currency_symbol">€</string>
    <string name="order">Order</string>
    <string name="unset_table">To go/Bar</string>
    <string name="table">Table</string>
    <string name="unsent_lines">There are still ordering items waiting</string>
    <string name="error_no_connection_on_pay_order">No internet connection! The orders will be synchronize later</string>
    <string name="error_no_connection_on_sync_order">No internet connection. Try again later</string>
    <string name="success_on_sync_order">Orders synchronized</string>
    <string name="no_connection_on_sync_order">Your device can\'t communicate with iDempiere. Try again later!</string>
    <string name="synchronize">Synchronize orders</string>
    <string name="no_unsync_orders">Great! All the orders are in iDempiere</string>
    <string name="comm_category">Communication</string>
    <string name="void_item">Void</string>
    <string name="already_voided_item">You can\'t void a voided line</string>
    <string name="pref_title_pin_code">PIN</string>
    <string name="error_invalid_reason">A reason must be introduced</string>
    <string name="approve_void">Void approval</string>
    <string name="void_summary">Void %1$d items?</string>
    <string name="void_approval_message">Approve %1$d voided items because of %2$s</string>
    <string name="assign_password">The admin PIN has not been assigned. Contact the administrator</string>
    <string name="wrong_password">Wrong password</string>
    <string name="from_date">From: %1$s</string>
    <string name="to_date">To: %1$s</string>
    <string name="no_report_selected">You must select at least one report type</string>
    <string name="no_records">No records</string>
    <string name="net_sales">Net sales</string>
    <string name="sales">Sales</string>
    <string name="pref_header_restaurant">Restaurant</string>
    <string name="order_prefix">Order prefix</string>
    <string name="prefix">The documentNo will start with this letters. Make it different for each device</string>
    <string name="complimentary">Complimentary</string>
    <string name="give_complimentary_product">Are you sure you want to give this item for free?</string>
    <string name="give">Give</string>
    <string name="receipt">Receipt</string>
    <string name="cash">Cash</string>
    <string name="logout">Logout</string>
    <string name="print_order">Print order</string>
    <string name="no_print_items">There are no items to print</string>
    <string name="no_printing_device">No printing device found</string>
    <string name="void_order">Void order</string>
    <string name="void_order_approval_message">Void order %1$d because of %2$s</string>
    <string name="reload_data">Reload data</string>
    <string name="reload_data_title">Reload data?</string>
    <string name="reload_data_message">Reload the data from iDempiere?</string>
    <string name="reload">Reload</string>
    <string name="success_on_load_data">Data loaded</string>
    <string name="updating">Updating…</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="change_url">This action will delete the local database. Do you want to proceed?</string>
    <string name="no_success_on_sync_order">There was an error. Contact the administrator</string>
    <string name="no_allow_complimentary">The item %1$s cannot be free</string>
    <string name="complete_order">Pay order?</string>
    <string name="no_undone_operation">This operation cannot be undone</string>
    <string name="about">About</string>
    <string name="about_forum">Visit the forum</string>
    <string name="about_google">Follow us on G+</string>
    <string name="about_rate">Rate us</string>
    <string name="about_license">License</string>
    <string name="about_help">Help</string>
    <string name="developedBy">Developed by: </string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_summary">Information about Freibier POS</string>
    <string name="confirm_exit">Tap again to exit Freibier POS</string>
    <string name="prefix_number">The orders will be numbered from this number consecutively.</string>
    <string name="order_number_prefix">Initial order number</string>
    <string name="wrong_order_number">Orders with a lower number and the same prefix already exist. Set a number greater than %1$d.</string>
    <string name="unable_join">No open orders to join.</string>
    <string name="server_data">Connection data</string>
    <string name="table_switched">Table switched</string>
    <string name="pending_orders">Pending orders</string>
    <string name="pref_change_error">There are orders waiting to be synchronized. Please synchronize them before changing this setting</string>
    <string name="void_qty">How many items do you want to void?</string>
    <string name="error_qty_void">The maximum qty to void is: %1$d</string>
    <string name="order_no">Order: %1$s</string>
    <string name="voided">Voided</string>
    <string name="net_label">Subtotal without tax</string>
    <string name="tax_label">VAT</string>
    <string name="error_invalid_price">Invalid price. Must be greater than %1$s</string>
    <string name="price">Price</string>
    <string-array name="report_types_titles">
        <item>Sales</item>
        <item>My sales</item>
        <item>Void items</item>
        <item>Table sales</item>
        <item>Product sales</item>
    </string-array>
    <string-array name="report_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="payment_types_names">
        <item>Cash</item>
        <item>Credit card</item>
    </string-array>
</resources>