<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.bxservice.bxpos.ui.EditOrderActivity">

    <item android:id="@+id/set_guests"
        android:title="@string/guests"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/add_note"
        android:title="@string/note"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/split_order"
        android:title="@string/split_order"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item android:id="@+id/join_orders"
        android:title="@string/join_orders"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/change_table"
        android:title="@string/change_table"
        android:orderInCategory="500"
        app:showAsAction="never" />

    <item android:id="@+id/add_item"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add" />

</menu>
