<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_pay_order"
    tools:context="de.bxservice.bxpos.ui.PayOrderActivity">

    <include
        layout="@layout/payment_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@color/pad_numeric_background_color"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:layout_gravity="bottom">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <Button android:layout_width="55dp"
                    android:id = "@+id/seven"
                    style="@style/PadButtonStyle"
                    android:text="@string/seven" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/eight"
                    android:text="@string/eight" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/nine"
                    android:text="@string/nine" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/four"
                    android:text="@string/four" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/five"
                    android:text="@string/five" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/six"
                    android:text="@string/six" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/one"
                    android:text="@string/one" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/two"
                    android:text="@string/two" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/three"
                    android:text="@string/three" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="1">

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/dec"
                    android:text="@string/decimal" />

                <Button android:layout_width="55dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/zero"
                    android:text="@string/zero" />

                <Button android:layout_width="0dp"
                    style="@style/PadButtonStyle"
                    android:id = "@+id/exact"
                    android:text="@string/del"
                    android:layout_weight="0.37" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:background="@color/pad_operator_background_color"
            android:layout_height="match_parent"
            android:weightSum="2">

            <Button
                style="@style/OperationButtonStyle"
                android:layout_weight="1"
                android:id = "@+id/quickPay"
                android:text="@string/exact"
                />

            <Button
                style="@style/OperationButtonStyle"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:id = "@+id/pay"
                android:text="@string/pay" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
