<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.bxservice.bxpos.ui.CreateOrderActivity">

    <item android:id="@+id/set_guests"
        android:title="@string/guests"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/add_note"
        android:title="@string/note"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/items_search"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

</menu>
