<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
    android:id="@+id/ctx_item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete"
        android:titleCondensed="@string/delete">
    </item>

    <item
        android:id="@+id/ctx_item_copy"
        android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
        app:showAsAction="ifRoom|withText"
        android:title="@string/copy"
        android:titleCondensed="@string/copy">
    </item>

    <item
        android:id="@+id/ctx_item_note"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:title="@string/note"
        android:titleCondensed="@string/note">
    </item>

</menu>