<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="de.bxservice.bxpos.ui.PaymentActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:id="@+id/linearLayout">
        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Egal"
            android:id = "@+id/display"
            android:hint="egal" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:layout_gravity="bottom">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <Button android:layout_width="55dp"
                    android:id = "@+id/seven"
                    android:layout_height="match_parent"
                    android:text="@string/seven" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/eight"
                    android:text="@string/eight" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/nine"
                    android:text="@string/nine" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/div"
                    android:text="/" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/four"
                    android:text="@string/four" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/five"
                    android:text="@string/five" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/six"
                    android:text="@string/six" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/mul"
                    android:text="*" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/one"
                    android:text="@string/one" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/two"
                    android:text="@string/two" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/three"
                    android:text="@string/three" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/sub"
                    android:text="-" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/cancel"
                    android:text="@string/cancel" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/zero"
                    android:text="@string/zero" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/equal"
                    android:text="=" />

                <Button android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/add"
                    android:text="@string/add" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:paddingTop="20dp">

            <Button android:layout_width="55dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id = "@+id/cancel1"
                android:text="@string/cancel" />

            <Button android:layout_width="55dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id = "@+id/zero1"
                android:text="@string/zero" />

            <Button android:layout_width="55dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id = "@+id/equal1"
                android:text="=" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
